@@ -82,6 +82,11 @@ AC_SUBST(CLEANFILES)
 
 TEA_ENABLE_THREADS
 
+
+SC_TCL_EARLY_FLAGS
+SC_TCL_64BIT_FLAGS
+
+
 TEA_ENABLE_SHARED
 
 TEA_CONFIG_CFLAGS
